Issue #166, hover on ios is strange

--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -43,7 +43,7 @@
     -moz-transition: all $transitionDuration ease-in;
     transition: all $transitionDuration ease-in;
 
-    &:hover {
+    .no-touch &:hover {
       background: $transitionBackgroundColor;
       color: $transitionColor;
     }
