--- a/style.scss
+++ b/style.scss
@@ -34,14 +34,14 @@ html {
     Bulletproof @font-face syntax: http://mky.be/font-face/bulletproof/ */
 
 a {color: #03f;}
-a:hover {color: #69f;}
+.no-touch a:hover {color: #69f;}
 
 /* Custom text-selection colors (remove any text shadows: twitter.com/miketaylr/status/12228805301) */
 ::-moz-selection{background: #fcd700; color: #fff; text-shadow: none;}
 ::selection {background: #fcd700; color: #fff; text-shadow: none;}
 
 /*  j.mp/webkit-tap-highlight-color */
-a:link {-webkit-tap-highlight-color: #fcd700;}
+a:link {-webkit-tap-highlight-color: $carolinaBlue;}
 
 ins {background-color: #fcd700; color: #000; text-decoration: none;}
 mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: bold;}
